--- a/portfolio.html
+++ b/portfolio.html
@@ -18,5 +18,9 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
         </div>
+        <h3><a href="https://scratch.mit.edu/projects/260704323/#player" target="_blank">Far From home</a></h3><!-- put image tag in between the a href=-->
+        <p>The plot of the game is that a one manned spaceship sent from Planet X was launched into the deep dark spaces of the vast universe.
+        Crash landing on the planet Jupiter, the lost voyager manages to fix the ship and blast their way home. However, with the limited
+        life supplies and broken navigator, the voyager has no clue that they will never make it home. Now they face the deep dark dangers of space.</p>
     </body>
 </html>
