--- a/portfolio.html
+++ b/portfolio.html
@@ -22,5 +22,11 @@
         <p>The plot of the game is that a one manned spaceship sent from Planet X was launched into the deep dark spaces of the vast universe.
         Crash landing on the planet Jupiter, the lost voyager manages to fix the ship and blast their way home. However, with the limited
         life supplies and broken navigator, the voyager has no clue that they will never make it home. Now they face the deep dark dangers of space.</p>
+        <br>
+        <br>
+        <h3><a href="https://repl.it/@TimNguyen2/Choose-Your-Own-Adventure-Happy-in-the-Woods" target="_blank">Happy in the Woods</a></h3>
+        <p>Happy, a lone papillon dog searching for his lost friend, who isn't really lost. As he ventures through the forest there is a fork in the path and it is up to 
+        the user to decide what he will do. Will he die? Will he make it to his friend's house? No one will never know except you, only if you decide what Happy will do.
+        Happy also gets to meet a lot of other animals in the forest. No spoilers.</p>
     </body>
 </html>
