--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,38 @@
             <li><a href="resume.html">Resume</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
+        <a href="portfolio.html#happy" id="happya">Happy in the Woods</a>
         </div>
+        
         <h3><a href="https://scratch.mit.edu/projects/260704323/#player" target="_blank">Far From home</a></h3><!-- put image tag in between the a href=-->
         <p>The plot of the game is that a one manned spaceship sent from Planet X was launched into the deep dark spaces of the vast universe.
         Crash landing on the planet Jupiter, the lost voyager manages to fix the ship and blast their way home. However, with the limited
         life supplies and broken navigator, the voyager has no clue that they will never make it home. Now they face the deep dark dangers of space.</p>
         <br>
         <br>
+        <div id="happy"><a name='happy'>
         <h3><a href="https://repl.it/@TimNguyen2/Choose-Your-Own-Adventure-Happy-in-the-Woods" target="_blank">Happy in the Woods</a></h3>
-        <p>Happy, a lone papillon dog searching for his lost friend, who isn't really lost. As he ventures through the forest there is a fork in the path and it is up to 
-        the user to decide what he will do. Will he die? Will he make it to his friend's house? No one will never know except you, only if you decide what Happy will do.
-        Happy also gets to meet a lot of other animals in the forest. No spoilers.</p>
+        <p>First off, my partner and I had to come up with a story. This was the hard part because we needed to organize the scenes and the decisions that we are allowing
+        the user to input. We wanted the story to change as the player made decisions, sort of like Telltale video games. Just like an interactive game. So we decided to make a flow map 
+        which made this step a whole lot easier. The story goes along like this, a cute dog is looking for his friend. He needs to go through a forest in order to get to his house.
+        He meets a fork in the road and has to decide. Along the way he meets new animals who may help, or may not help him.
+        </p>
+        </div>
+        <a href="https://docs.google.com/drawings/d/1hWj2DMRuKrwdmkqaksd3DO7jMTrsIHdC1A7HwGgfCYM/edit?usp=sharing" target="_blank"><image src="flowmap.png" alt="flowmap" width="500" height="500"></a>
+        <br>
+        <p>Looking back at two other short stories I have read, there obviously isn't any way for the reader to make choices, but there
+        were points in the story where the main character had to choose whether or not to accept the help from others. The story was about a lone man who was visited by four traveling sisters.
+        The first sister understands his reclusive nature and urges him to use his time alone to reflect and meditate. The second brings fruit and flowers and tends to his crops and revives
+        his garden. The third warms the man's heart and convinces the man to take a step outside and to embrace the world around him. The fourth sister, tells him to look at all he has
+        and be thankful. The old man gave them magical powers so that they can share their kindness and wisdom to all over the world. They were known as Winter, Spring, Summer, and Fall.
+        I like this story because the old man did not have to give the sisters magical powers, he could have used it to make them work for him and help him with his farm. Instead he 
+        wanted the world to also understand what it's like to have kind people give a hand.
+        </p>
+        <br>
+        <p>The second story is about a woman in a tower. She was locked away in her castle with no freedom. Many knights tried to break through the castle's defense in search
+        of the princess's love but all have died trying. One day, a legendary warrior with a pure heart and soul who seeks justice and peace for the world, approaches the castle in hopes of freeing
+        the imprisoned woman. He ultimately frees the princess and both fight their way out together. The two fell in love instantly after protecting each other during their escape. I also like
+        this story because the legendary warrior didn't storm the castle seeking the woman's love, instead he wanted to give her freedom.
+        </p>
     </body>
 </html>
