--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,14 @@
         He meets a fork in the road and has to decide. Along the way he meets new animals who may help, or may not help him.
         </p>
         </div>
+        <p>The incremental and iterative development process of our program are that the time for the texts to finish typing is different, we purposely increased and decreased certain
+        character dialogue. The next is that we used an if-else statement. It does not use numbers,but it would work exactly the same as numbers. If the user choose left, the script will look for that input and since we 
+        used functions, which will later be discussed, we connected the story together. The process of seperating the story into functions was quite bothersome. However, it was quickly dealt with for my partner and I
+        had a flow map of the story. The importance of seperating them into different functions is that the decisions and plot won't be intertwined. This makes organzing easier and choosing which function links to which choice the user makes.
+        It basically allows us to put the story together. That being the advantage, makes it less sophisticated than it needs to be. This is an example of abstraction because the user gets
+        to decide how the story plays out, instead of how a normal book does things where the reader has no effect on it.
+            
+        </p>
         <a href="https://docs.google.com/drawings/d/1hWj2DMRuKrwdmkqaksd3DO7jMTrsIHdC1A7HwGgfCYM/edit?usp=sharing" target="_blank"><image src="flowmap.png" alt="flowmap" width="500" height="500"></a>
         <br>
         <p>Looking back at two other short stories I have read, there obviously isn't any way for the reader to make choices, but there
